--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,31 +1,19 @@
 <ion-view view-title="">
 
-  <ion-content padding="true">
+  <ion-content>
+    <div class="container">
+      <h1 class="welcome-text">Seja Bem-vindo!</h1>
 
-    <div class="row row-center">
-      <div class="col"><h1 class="welcome-text">Seja Bem-vindo!</h1></div>
-    </div>
+      <h1 class="logo-text">Perseus</h1>
 
-    <div class="row row-center">
-      <div class="col"><h1 class="logo-text">Perseus</h1></div>
-    </div>
-    <div class="row row-center">
-      <div class="col"><i class="ion-android-arrow-down"></i></div>
-    </div>
-    <br>
-    <div class="row">
-      <div class="col col-offset-25">
-        <a href="#/categories"><button class="intro button">Produtos</button></a>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col col-offset-25">
-        <a href="#/promocoes"><button class="intro button">Promoções</button></a>
-      </div>
-    </div>
-    <br>
-    <div class="row row-center">
-      <div class="col"><i class="ion-ios-cart-outline"></i></div>
+      <a href="#" onclick="return false;"><i class="ion-android-arrow-down"></i></a>
+      <br>
+      <a href="#/categories"><button class="intro button">Produtos</button></a>
+      <br>
+      <a href="#/promocoes"><button class="intro button">Promoções</button></a>
+
+      <i class="ion-ios-cart-outline"></i>
     </div>
   </ion-content>
+
 </ion-view>
