--- a/www/templates/promocoes.html
+++ b/www/templates/promocoes.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Produtos em Promoção">
   <ion-content>
-    </ion-list>
+    <ion-list>
     <ion-item class="item-text-wrap" ng-repeat="item in promo">
 
       <div class="row row-center">
