--- a/www/templates/products.html
+++ b/www/templates/products.html
@@ -1,8 +1,8 @@
 <ion-view view-title="Produtos Disponíveis">
-  <ion-content ng-controller="ProductCtrl as product">
+  <ion-content overflow-scroll="true" ng-controller="ProductCtrl as product">
     <ion-list>
 
-      <ion-item class="" ng-repeat="prod in pro" href="#/product-detail/{{prod.id}}">
+      <ion-item class="item-text-wrap" ng-repeat="prod in pro" href="#/product-detail/{{prod.id}}">
         <div class="row row-center">
           <div class="col col-25">
              <img class="product-image" ng-src="{{prod.image}}" fallback-src="{{'img/fa-shopping-basket_60.png'}}"/>
@@ -14,12 +14,11 @@
         </div>
             </div>
       </ion-item>
-
     </ion-list>
-      <ion-infinite-scroll
-        ng-if="!noMoreItemsAvailable"
-        on-infinite="loadMore()"
-        distance="1%">
-      </ion-infinite-scroll>
+    <ion-infinite-scroll
+      ng-if="!noMoreItemsAvailable"
+      on-infinite="loadMore()"
+      distance="1%">
+    </ion-infinite-scroll>
   </ion-content>
 </ion-view>
