ionic loading nas views a funcionar

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -6,7 +6,7 @@
 
       <h1 class="logo-text">Perseus</h1>
 
-      <a href="#" onclick="return false;"><i class="ion-android-arrow-down"></i></a>
+      <i class="ion-android-arrow-down"></i>
       <br>
       <a href="#/categories"><button class="intro button">Produtos</button></a>
       <br>
