--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9899,7 +9899,7 @@ h2.partilha {
 img.product-image-detail-modal {
   align-content: center;
   max-width: 350px;
-  margin-top: 20%; }
+  margin-top: 20px; }
 
 img.product-image-promo {
   max-width: 100px;
@@ -9912,21 +9912,11 @@ hr .line {
   color: black;
   height: 15px; }
 
-.welcome-text {
+h1.welcome-text {
   font-family: "Fira Sans",sans-serif;
   font-weight: 300;
+  margin-top: 10px;
   font-size: 2.5em; }
-
-.spinner svg {
-  fill: #2E9FC2;
-  width: 40px;
-  height: 40px;
-  margin-top: 5px;
-  stroke: #2E9FC2; }
-
-hr {
-  visibility: hidden;
-  margin: 0 !important; }
 
 .bar.bar-positive .title {
   font-family: 'Fira Sans', sans-serif !important;
@@ -9944,14 +9934,22 @@ i.ion-android-arrow-down::before {
 i.ion-android-arrow-down {
   font-size: 4em;
   color: white;
+  position: relative;
+  left: 50%;
+  width: 50px;
+  margin-left: -25px;
   background-color: #2E9FC2;
-  -webkit-animation: flash 2s ease-out;
-  -moz-animation: flash 2s ease-out;
-  animation: flash 2s ease-out;
+  -webkit-animation: flash 3s ease-out;
+  -moz-animation: flash 3s ease-out;
+  animation: flash 3s ease-out;
   -webkit-animation-iteration-count: infinite;
   -moz-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
-  border-radius: 25px; }
+  border-radius: 15px; }
+
+hr {
+  visibility: hidden;
+  margin: 0; }
 
 @-moz-keyframes ion-android-arrow-down {
   0% {
