--- a/www/templates/products.html
+++ b/www/templates/products.html
@@ -1,8 +1,9 @@
 <ion-view view-title="Produtos Disponíveis">
-  <ion-content overflow-scroll="true" ng-controller="ProductCtrl as product">
+  <ion-content ng-controller="ProductCtrl as product">
     <ion-list>
 
       <ion-item class="item-text-wrap" ng-repeat="prod in pro" href="#/product-detail/{{prod.id}}">
+
         <div class="row row-center">
           <div class="col col-25">
              <img class="product-image" ng-src="{{prod.image}}" fallback-src="{{'img/fa-shopping-basket_60.png'}}"/>
@@ -11,14 +12,17 @@
             <h3 class="product-name">{{prod.name}}</h3><hr>
             <h4 class="product-brand">{{prod.brand}}</h4><hr>
             <h5 class="product-price"> {{prod.currency}} {{prod.price}}</h5>
+          </div>
         </div>
-            </div>
+
       </ion-item>
+
     </ion-list>
-    <ion-infinite-scroll
-      ng-if="!noMoreItemsAvailable"
-      on-infinite="loadMore()"
-      distance="1%">
-    </ion-infinite-scroll>
+
+      <ion-infinite-scroll
+        ng-if="!noMoreItemsAvailable"
+        on-infinite="loadMore()"
+        distance="1%">
+      </ion-infinite-scroll>
   </ion-content>
 </ion-view>
