a trabalhar no sass

--- a/www/templates/category.html
+++ b/www/templates/category.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Categorias de Produtos">
   <ion-content>
     <ion-list class="item-text-wrap" ng-controller="CategoryCtrl as categories">
-      <ion-item class="category-list" href="#/products/{{item.id}}" ng-repeat="item in cat">
+      <ion-item class="category-list" ui-sref="products({id: item.id})" ng-repeat="item in cat">
         <h3 class="category-name"><i class="ion-android-send"></i> {{item.name}}</h3>
       </ion-item>
     </ion-list>
