--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -8,9 +8,9 @@
 
       <i class="ion-android-arrow-down"></i>
       <br>
-      <a href="#/categories"><button class="intro button">Produtos</button></a>
+      <a ui-sref="category"><button class="intro button">Produtos</button></a>
       <br>
-      <a href="#/promocoes"><button class="intro button">Promoções</button></a>
+      <a ui-sref="promocoes"><button class="intro button">Promoções</button></a>
 
       <i class="ion-ios-cart-outline"></i>
     </div>
