--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -17,29 +17,18 @@ $dark:                            #444 !default;
 
 // The path for our ionicons font files, relative to the built CSS in www/css
 
-
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
+$fira: "Fira Sans",sans-serif;
+$sourcepro: 'Source Sans Pro', Verdana, sans-serif;
+$right:'Righteous','Arial',sans-serif;
+$lightblue:#2E9FC2;
+$darkblue:#1D647A;
+$green:#037A67;
+$red:#DD4137;
 
-body{
-
-}
-@font-face {
-  font-family: "AUSTRALIA TITLE";
-  src: url('fonts/AUSTRALIA-TITLE.otf')
-  format("opentype");
-}
-
-@font-face {
-  font-family: "Grand Quatre";
-  src: url('fonts/grand_quatre.ttf')
-  format("truetype");
-}
-.homepage{
-  //margin-top:50%;
-}
 .welcome-text, .logo-text{
   text-align:center;
 }
@@ -48,7 +37,7 @@ body{
   color:white;
 }
 .pane{
-  background-color:#037A67;
+  background-color:$green;
 }
 h4.product-brand{
   text-transform:uppercase;
@@ -61,9 +50,9 @@ ion-content .product-detail-container{
   font-size:1.5em;
 }
 button.intro{
-  font-family:'Source Sans Pro', Verdana, sans-serif;
+  font-family:$sourcepro;
   font-size:2em;
-  color:#2E9FC2;
+  color:$lightblue;
   font-weight:800;
   background-color:white;
   border-radius:8px;
@@ -84,21 +73,21 @@ img.product-image-detail{
   max-width:320px;
 }
 h1.logo-text{
-  font-family:'Righteous','Arial',sans-serif;
+  font-family:$right;
   font-size:5em;
   font-weight: 500;
-  color: #1D647A;
+  color: $darkblue;
   text-align:center;
 }
 h3.category-name{
-  font-family: 'Source Sans Pro', 'Arial', sans-serif;
+  font-family: $sourcepro;
   font-weight:300;
   font-size:1.2em;
   text-align: left;
-  color:#037A67;
+  color:$green;
 }
 h3.product-name-promo, h5.product-promo, p.promo-date-text, br.product-poupa-price, h5.product-promo-price, h5.product-promo, h3.product-name, h3.product-detail-name, h4.product-brand, h4.product-detail-brand, h5.product-detail-brand, h5.product-detail-price{
-  font-family:'Source Sans Pro','Arial',sans-serif;
+  font-family:$sourcepro;
 }
 img.product-image-detail{
   display: block;
@@ -109,7 +98,7 @@ color:black;
 }
 
 h5.product-promo{
-  color:#DD4137;
+  color:$red;
   font-weight: 600;
   text-transform:uppercase;
   font-size:.8em;
@@ -118,7 +107,7 @@ h5.product-promo{
 
 p.promo-date-text{
 
-  color:#1D647A;
+  color:$darkblue;
   background-color:white;
   font-size:.8em;
   font-weight:300;
@@ -139,148 +128,147 @@ h5.product-poupa, br.product-poupa-price {
 }
 h5.product-price-promo{
   text-align:center;
-  color:#1D647A;
+  color:$darkblue;
   margin-left:20%;
   align-content: center;
   font-size:0.9em;
   background-color:white;
   border-radius:250px;
   padding:5px 10px;
-  border:1px double #1D647A;
+  border:1px double $darkblue;
 }
 h4.product-detail-brand{
   font-size:1.1em;
   font-weight:600;
-  color:#037A67;
+  color:$green;
   text-transform:uppercase;
 }
 
 h5.product-detail-price{
   font-size:1.2em;
   font-weight:600;
-  background-color:#037A67;
+  background-color:$green;
   color:white;
 }
 h3.product-name{
   font-size:1.1em;
   font-weight:300;
-  color:#037A67;
+  color:$green;
 }
 
 h3.product-name-promo{
   font-size:.8em;
   font-weight:300;
-  color:#037A67;
+  color:$green;
 }
 h3.product-detail-name{
   font-size:1.5em;
   font-weight:600;
-  color:#037A67;
+  color:$green;
   text-align: center;
 }
 
 h4.product-brand{
   font-size:0.8em;
   font-weight:600;
-  color:#037A67;
+  color:$green;
 }
 h5.product-price{
-  font-size:1.2em;
+  font-size:1em;
   color:white;
-  background-color:#037A67;
+  background-color:$green;
 }
 .item{
   border:none !important;
 }
 h2.partilha{
-  background-color:#037A67;
+  background-color:$green;
   color:white;
-  font-family:'Source Sans Pro','Arial',sans-serif;
+  font-family:$sourcepro;
   padding:5px 0;
   font-weight:300;
   text-transform: uppercase;
   text-align:center;
 }
 .ion-ios-plus-outline{
-  color:#037A67;
+  color:$green;
   font-size:2.3em;
 }
-img.product-image-detail-modal{
+img {
   align-content: center;
-  max-width:350px;
-  margin-top:20px;
-}
+  .product-image-detail-modal {
 
-img.product-image-promo{
-  max-width:100px;
-  align-content:center;
+    max-width: 350px;
+    margin-top: 20px;
+  }
+  .product-image-promo {
+    max-width: 100px;
+    align-content: center;
+  }
 }
+  .row.social-icons{
+    margin-top:10px;
+  }
+  h1.welcome-text{
+    font-family: $fira;
+    font-weight:300;
+    margin-top:10px;
+    font-size:2.5em;
+  }
+  .bar.bar-positive .title{
+    font-family: $fira;
+    font-weight:300;
+  }
+  .bar.bar-positive{
+    border-bottom:3px solid $lightblue !important;
+  }
+  ion-nav-bar .bar-positive{
+    text-transform:uppercase;
+  }
+  i.ion-android-arrow-down::before{
+    width:50px;
+  }
 
-.row.social-icons{
-  margin-top:10px;
-}
-hr .line{
-  color:black;
-  height:15px;
-}
-h1.welcome-text{
-  font-family: "Fira Sans",sans-serif;
-  font-weight:300;
-  margin-top:10px;
-  font-size:2.5em;
-}
-.bar.bar-positive .title{
-  font-family: 'Fira Sans', sans-serif !important;
-  font-weight:300;
-}
-.bar.bar-positive{
-  border-bottom:3px solid #2E9FC2 !important;
-}
-ion-nav-bar .bar-positive{
-  text-transform:uppercase;
-}
-i.ion-android-arrow-down::before{
- width:50px;
-}
+  i.ion-android-arrow-down{
+    font-size:4em;
+    color:white;
+    position:relative;
+    left:50%;
+    width:50px;
+    margin-left:-25px;
+    background-color:$lightblue;
+    -webkit-animation: flash 3s ease-out;
+    -moz-animation: flash 3s ease-out;
+    animation: flash 3s ease-out;
+    -webkit-animation-iteration-count: infinite;
+    -moz-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    border-radius:15px;
+  }
+  hr{
+    visibility: hidden;
+    margin:0;
+  }
 
-i.ion-android-arrow-down{
-  font-size:4em;
-  color:white;
-  position:relative;
-  left:50%;
-  width:50px;
-  margin-left:-25px;
-  background-color:#2E9FC2;
-  -webkit-animation: flash 3s ease-out;
-  -moz-animation: flash 3s ease-out;
-  animation: flash 3s ease-out;
-  -webkit-animation-iteration-count: infinite;
-  -moz-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  border-radius:15px;
-}
-hr{
-  visibility: hidden;
-  margin:0;
-}
+  @-moz-keyframes ion-android-arrow-down {
+    0% {-moz-transform: initial;opacity: 0.2;}
+    25% {-moz-transform: initial;opacity: 0.2;}
+    50% {-moz-transform: initial;opacity: 0.5;}
+    75% {-moz-transform: initial;opacity: 0.8;}
+    100% {-moz-transform: initial;opacity: 0.2;}
+  }
 
-@-moz-keyframes ion-android-arrow-down {
-  0% {-moz-transform: initial;opacity: 0.2;}
-  25% {-moz-transform: initial;opacity: 0.2;}
-  50% {-moz-transform: initial;opacity: 0.5;}
-  75% {-moz-transform: initial;opacity: 0.8;}
-  100% {-moz-transform: initial;opacity: 0.2;}
-}
+  @-webkit-keyframes "flash" {
+    0% {-webkit-transform: initial; opacity:0.2;}
+    25% {-webkit-transform: initial;opacity: 0.2;}
+    50% {-webkit-transform: initial;opacity: 0.5;}
+    75% {-webkit-transform: initial;opacity: 0.8;}
+    100% {-webkit-transform: initial;opacity: 0.2;}
+  }
 
-@-webkit-keyframes "flash" {
-  0% {-webkit-transform: initial; opacity:0.2;}
-  25% {-webkit-transform: initial;opacity: 0.2;}
-  50% {-webkit-transform: initial;opacity: 0.5;}
-  75% {-webkit-transform: initial;opacity: 0.8;}
-  100% {-webkit-transform: initial;opacity: 0.2;}
-}
-
-div .container > a, div .container > i {
-  display:block;
-  text-align:center;
+  div {
+    .container > a, > i {
+        display: block;
+        text-align: center;
+      }
 }
