--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -7,10 +7,10 @@
       <h1 class="logo-text">Perseus</h1>
 
       <i class="ion-android-arrow-down"></i>
-      <br>
-      <a ui-sref="category"><button class="intro button">Produtos</button></a>
-      <br>
-      <a ui-sref="promocoes"><button class="intro button">Promoções</button></a>
+
+      <a ui-sref="category"><button class="intro-prod button">Produtos</button></a>
+
+      <a ui-sref="promocoes"><button class="intro-promo button">Promoções</button></a>
 
       <i class="ion-ios-cart-outline"></i>
     </div>
