--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -1,25 +1,5 @@
-/*
-To customize the look and feel of Ionic, you can override the variables
-in ionic's _variables.scss file.
-
-For example, you might change some of the default colors:
-
-$light:                           #fff !default;
-$stable:                          #f8f8f8 !default;
-$positive:                        #387ef5 !default;
-$calm:                            #11c1f3 !default;
-$balanced:                        #33cd5f !default;
-$energized:                       #ffc900 !default;
-$assertive:                       #ef473a !default;
-$royal:                           #886aea !default;
-$dark:                            #444 !default;
-*/
-
-// The path for our ionicons font files, relative to the built CSS in www/css
-
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
-// Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 $fira: "Fira Sans",sans-serif;
 $sourcepro: 'Source Sans Pro', Verdana, sans-serif;
@@ -28,222 +8,206 @@ $lightblue:#2E9FC2;
 $darkblue:#1D647A;
 $green:#037A67;
 $red:#DD4137;
+$white:white;
 
-.welcome-text, .logo-text{
-  text-align:center;
+h1, h2, h3, h4, h5{
+  font-family:$sourcepro;
+}
+img {
+  align-content: center;
+  display: block;
+  margin: 0 auto;
+  &.product-image {
+    max-width: 60px;
+  }
+  &.product-image-detail {
+    max-width: 250px;
+  }
+  &.product-image-detail-modal {
+    max-width: 300px;
+    margin-top: 100px;
+  }
+  &.product-image-promo {
+    max-width: 100px;
+  }
 }
 
-.welcome-text{
-  color:white;
+.item{
+  border:none !important;
+}
+
+h1.welcome-text{
+  font-family: $fira;
+  font-weight:200;
+  margin-top:20px;
+  font-size:2.2em;
+  color:$white;
 }
 .pane{
   background-color:$green;
 }
-h4.product-brand{
+.product-brand, .bar.bar-positive .title, .product-promo, .product-poupa, .product-poupa-price, .product-detail-brand, .partilha{
   text-transform:uppercase;
 }
 ion-content .product-detail-container{
-  background-color:white;
+  background-color:$white;
 }
 
 .ion-social-twitter, .ion-social-facebook{
   font-size:1.5em;
 }
-button.intro{
-  font-family:$sourcepro;
+button.intro-prod,.intro-promo{
   font-size:2em;
   color:$lightblue;
-  font-weight:800;
-  background-color:white;
+  font-weight:600;
+  background-color:$white;
   border-radius:8px;
   padding:5px 10px;
+  margin-top:10px;
   border:none;
 }
 .ion-ios-cart-outline{
   font-size:12em;
-  color:white;
+  color:$white;
 }
-img.product-image{
-  max-width:60px;
-  align-content:center;
-}
-img.product-image-detail{
-  display: block;
-  margin: 0 auto;
-  max-width:320px;
-}
-h1.logo-text{
+
+
+.logo-text{
   font-family:$right;
   font-size:5em;
   font-weight: 500;
   color: $darkblue;
-  text-align:center;
-}
-h3.category-name{
-  font-family: $sourcepro;
-  font-weight:300;
-  font-size:1.2em;
-  text-align: left;
-  color:$green;
-}
-h3.product-name-promo, h5.product-promo, p.promo-date-text, br.product-poupa-price, h5.product-promo-price, h5.product-promo, h3.product-name, h3.product-detail-name, h4.product-brand, h4.product-detail-brand, h5.product-detail-brand, h5.product-detail-price{
-  font-family:$sourcepro;
-}
-img.product-image-detail{
-  display: block;
-  margin: 0 auto;
-}
-h5.product-promo-price{
-color:black;
-}
+  }
 
-h5.product-promo{
+.product-promo-price{
+  color:black;
+}
+.product-promo{
   color:$red;
   font-weight: 600;
-  text-transform:uppercase;
   font-size:.8em;
-  margin-left:23%;
 }
-
-p.promo-date-text{
-
+.promo-date-text{
   color:$darkblue;
-  background-color:white;
+  background-color:$white;
   font-size:.8em;
   font-weight:300;
 }
-h5.product-poupa, br.product-poupa-price {
+.product-poupa, br.product-poupa-price {
   text-align: center;
   background-color:#B08300;
-  color:white;
+  color:$white;
   margin-left:20%;
   font-size: 0.8em;
   font-weight:300;
- border-radius:100px;
-  padding:5px 0px;
+  border-radius:100px;
+  padding:5px 0;
   -webkit-box-shadow: 1px 1px 5px 2px rgba(176,131,0,0.4);
   -moz-box-shadow: 1px 1px 5px 2px rgba(176,131,0,0.4);
   box-shadow: 1px 1px 5px 2px rgba(176,131,0,0.4);
-  text-transform:uppercase;
 }
-h5.product-price-promo{
+.product-price-promo{
   text-align:center;
   color:$darkblue;
   margin-left:20%;
   align-content: center;
   font-size:0.9em;
-  background-color:white;
+  background-color:$white;
   border-radius:250px;
   padding:5px 10px;
   border:1px double $darkblue;
 }
-h4.product-detail-brand{
-  font-size:1.1em;
-  font-weight:600;
-  color:$green;
-  text-transform:uppercase;
-}
-
-h5.product-detail-price{
-  font-size:1.2em;
-  font-weight:600;
-  background-color:$green;
-  color:white;
-}
-h3.product-name{
-  font-size:1.1em;
-  font-weight:300;
-  color:$green;
-}
-
-h3.product-name-promo{
-  font-size:.8em;
-  font-weight:300;
-  color:$green;
-}
-h3.product-detail-name{
-  font-size:1.5em;
-  font-weight:600;
-  color:$green;
-  text-align: center;
-}
-
-h4.product-brand{
-  font-size:0.8em;
-  font-weight:600;
-  color:$green;
-}
-h5.product-price{
-  font-size:1em;
-  color:white;
-  background-color:$green;
-}
-.item{
-  border:none !important;
-}
-h2.partilha{
-  background-color:$green;
-  color:white;
-  font-family:$sourcepro;
-  padding:5px 0;
-  font-weight:300;
-  text-transform: uppercase;
-  text-align:center;
-}
-.ion-ios-plus-outline{
-  color:$green;
-  font-size:2.3em;
-}
-img {
-  align-content: center;
-  .product-image-detail-modal {
-
-    max-width: 350px;
-    margin-top: 20px;
+h4 {
+  font-weight: 600;
+  color: $green;
+  &.product-detail-brand {
+    font-size: 1em;
   }
-  .product-image-promo {
-    max-width: 100px;
-    align-content: center;
+  &.product-brand {
+    font-size: 0.8em;
   }
 }
+
+h5 {
+  color: $white;
+  background-color: $green;
+  &.product-detail-price {
+    font-size: 1.2em;
+    font-weight: 600;
+  }
+  &.product-price {
+    font-size: 1.2em;
+  }
+}
+
+h3 {
+  color: $green;
+  &.product-name {
+    font-size: 1.1em;
+    font-weight: 300;
+  }
+  &.product-detail-name {
+    font-size: 1.8em;
+    font-weight: 600;
+    text-align: center;
+  }
+  &.category-name {
+    font-size: 1.2em;
+    text-align: left;
+    font-weight: 300;
+  }
+}
+  .product-name-promo{
+    font-size:.8em;
+    font-weight:300;
+    color:$green;
+  }
+
+
+  h2.partilha{
+    background-color:$green;
+    color:$white;
+    padding:5px 0;
+    font-weight:300;
+    text-align:center;
+  }
+  .ion-ios-plus-outline{
+    color:$green;
+    font-size:2.3em;
+  }
+
   .row.social-icons{
     margin-top:10px;
   }
-  h1.welcome-text{
-    font-family: $fira;
-    font-weight:300;
-    margin-top:10px;
-    font-size:2.5em;
-  }
-  .bar.bar-positive .title{
-    font-family: $fira;
-    font-weight:300;
-  }
+
   .bar.bar-positive{
     border-bottom:3px solid $lightblue !important;
+    & .title {
+      font-family: $fira;
+      font-weight: 300;
+      font-size: 1.1em;
+    }
   }
-  ion-nav-bar .bar-positive{
-    text-transform:uppercase;
-  }
+
   i.ion-android-arrow-down::before{
     width:50px;
   }
 
   i.ion-android-arrow-down{
     font-size:4em;
-    color:white;
+    color:$white;
     position:relative;
     left:50%;
     width:50px;
     margin-left:-25px;
     background-color:$lightblue;
-    -webkit-animation: flash 3s ease-out;
-    -moz-animation: flash 3s ease-out;
-    animation: flash 3s ease-out;
+    -webkit-animation: flash 2s ease-out;
+    -moz-animation: flash 2s ease-out;
+    animation: flash 2s ease-out;
     -webkit-animation-iteration-count: infinite;
     -moz-animation-iteration-count: infinite;
     animation-iteration-count: infinite;
-    border-radius:15px;
+    border-radius:25px;
   }
   hr{
     visibility: hidden;
@@ -267,8 +231,10 @@ img {
   }
 
   div {
-    .container > a, > i {
-        display: block;
-        text-align: center;
-      }
-}
+    .container > a, > i, > h1{
+      display: block;
+      text-align: center;
+    }
+  }
+
+
