--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -16,6 +16,7 @@ h1, h2, h3, h4, h5{
 .barcode{
   height:80px;
   text-align: center;
+  margin-top:40px;
 
 }
 .item{
@@ -88,62 +89,65 @@ button.intro-prod,.intro-promo{
   -moz-box-shadow: 1px 1px 5px 2px rgba(176,131,0,0.4);
   box-shadow: 1px 1px 5px 2px rgba(176,131,0,0.4);
 }
-.product-price-promo{
-  text-align:center;
-  color:$darkblue;
-  margin-left:20%;
-  align-content: center;
-  font-size:0.9em;
-  background-color:$white;
-  border-radius:250px;
-  padding:5px 10px;
-  border:1px double $darkblue;
-}
-h4 {
-  font-weight: 600;
-  color: $green;
-  &.product-detail-brand {
-    font-size: 1em;
-  }
-  &.product-brand {
-    font-size: 0.8em;
-  }
-}
 
-h5 {
-  &.product-detail-price {
-    font-size: 1.2em;
-    font-weight: 600;
-    color: $white;
-    background-color: $green;
-  }
-  &.product-price {
-    font-size: 1.2em;
-    color: $white;
-    background-color: $green;
-  }
-  &.bar-number{
+  .product-price-promo{
     text-align:center;
-    font-size:1em;
+    color:$darkblue;
+    margin-left:20%;
+    align-content: center;
+    font-size:0.9em;
+    background-color:$white;
+    border-radius:250px;
+    padding:5px 10px;
+    border:1px double $darkblue;
   }
-}
-
-h3 {
-  color: $green;
-  &.product-name {
-    font-size: 1.1em;
-    font-weight: 300;
-  }
-  &.product-detail-name {
-    font-size: 1.3em;
+  h4 {
     font-weight: 600;
+    color: $green;
+    &.product-detail-brand {
+      font-size: 1em;
+    }
+    &.product-brand {
+      font-size: 0.8em;
+    }
   }
-  &.category-name {
-    font-size: 1.2em;
-    text-align: left;
-    font-weight: 300;
+
+  h5 {
+    &.product-detail-price {
+      font-size: 1.2em;
+      font-weight: 600;
+      color: $white;
+      background-color: $green;
+    }
+    &.product-price {
+      font-size: 1.2em;
+      color: $white;
+      background-color: $green;
+    }
+    &.bar-number{
+      text-align:center;
+      font-size:1em;
+      margin-top:80px;
+    }
   }
-}
+
+  h3 {
+    color: $green;
+    &.product-name {
+      font-size: 1.1em;
+      font-weight: 300;
+    }
+    &.product-detail-name {
+      font-size: 1.5em;
+      font-weight: 200;
+      text-align: center;
+    }
+    &.category-name {
+      font-size: 1.2em;
+      text-align: left;
+      font-weight: 300;
+    }
+  }
   .product-name-promo{
     font-size:.8em;
     font-weight:300;
@@ -218,177 +222,150 @@ h3 {
     .container > a, > i, > h1{
       display: block;
       text-align: center;
-      }
+    }
   }
 
-.slide-in-right {
-  -webkit-transform: translateX(100%);
-  transform: translateX(100%); }
+  .slide-in-right {
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%); }
 
-.slide-in-right.ng-enter, .slide-in-right > .ng-enter {
-  -webkit-transition: all cubic-bezier(0.1, 0.7, 0.1, 1) 800ms;
-  transition: all cubic-bezier(0.1, 0.7, 0.1, 1) 800ms; }
+  .slide-in-right.ng-enter, .slide-in-right > .ng-enter {
+    -webkit-transition: all cubic-bezier(0.1, 0.7, 0.1, 1) 200ms;
+    transition: all cubic-bezier(0.1, 0.7, 0.1, 1) 200ms; }
 
-.slide-in-right.ng-enter-active, .slide-in-right > .ng-enter-active {
-  -webkit-transform: translateX(0);
-  transform: translateX(0); }
+  .slide-in-right.ng-enter-active, .slide-in-right > .ng-enter-active {
+    -webkit-transform: translateX(0);
+    transform: translateX(0); }
 
-.slide-in-right.ng-leave, .slide-in-right > .ng-leave {
-  -webkit-transition: all ease-in-out 250ms;
-  transition: all ease-in-out 250ms; }
+  .slide-in-right.ng-leave, .slide-in-right > .ng-leave {
+    -webkit-transition: all ease-in-out 250ms;
+    transition: all ease-in-out 250ms; }
 
 
-img {
-  align-content: center;
-  display: block;
-  margin: 0 auto;
-  &.product-image {
-    max-width: 60px;
+  img {
+    align-content: center;
+    display: block;
+    margin: 0 auto;
+    &.product-image {
+      max-width: 60px;
+    }
+    &.product-image-detail {
+      max-width: 250px;
+    }
+    &.product-image-detail-modal {
+      max-width: 300px;
+      margin-top: 100px;
+      -webkit-animation: modal_anim 3s forwards;
+      -moz-animation: modal_anim 3s forwards;
+      animation: modal_anim 3s forwards;
+    }
+    &.product-image-promo {
+      max-width: 100px;
+    }
   }
-  &.product-image-detail {
-    max-width: 250px;
+
+  .ion-ios-plus-outline{
+    color:$green;
+    position: relative;
+    font-size:2.3em;
+    background-color:transparent;
+    padding: 10px;
+    -webkit-animation: plus 1s infinite ease-out;
+    animation: plus 1s infinite ease-out;
   }
-  &.product-image-detail-modal {
-    max-width: 300px;
-    margin-top: 100px;
-    -webkit-animation: modal_anim 3s forwards;
-    -moz-animation: modal_anim 3s forwards;
-    animation: modal_anim 3s forwards;
-  }
-  &.product-image-promo {
-    max-width: 100px;
-  }
+.ion-ios-plus-outline.activated{
+    background-color: transparent;
+    -webkit-animation: plus_active 1s infinite ease-in;
+    animation: plus_active 1s infinite ease-in;
+}
+button.ion-android-share-alt.activated{
+    background-color: transparent;
 }
 
-.ion-ios-plus-outline{
+.ion-android-share-alt{
+  background-color:transparent;
   color:$green;
-  position: relative;
-  font-size:2.3em;
-  padding: 10px;
-  -webkit-animation: plus 2s infinite ease-out;
-  animation: plus 2s infinite ease-out;
-
-}
-.ion-social-twitter, .ion-social-facebook{
-  -webkit-animation: social 2s forwards;
-  animation: social 2s forwards;
   font-size:1.5em;
+  -webkit-animation:share 1400ms infinite;
+  animation:share 1400ms infinite;
 }
 
-@-webkit-keyframes social{
-0% {-webkit-transform:translateY(-100%);margin:0px;}
-//50%{-webkit-transform:translateY(-50%);}
-100%{-webkit-transform:translateY(0%);margin:10px;}
-}
+  button.ion-social-twitter, button.ion-social-facebook{
+    -webkit-animation: social 400ms forwards;
+    animation: social 400ms forwards;
+    font-size:1.3em;
+    height:42px;;
+    width:42px;
+    padding:0;
+    border-radius:25px;
+    min-height:0 !important;
+    min-width:0 !important;
 
-@keyframes social{
-  0% {transform:translateY(-100%); margin:0px;}
-  //50%{transform:translateY(-50%);}
-  100%{transform:translateY(0%);margin:10px;}
-}
+  }
 
-@-webkit-keyframes plus{
-  //0% {color:$darkblue; -webkit-transform:translateY(-100%);}
-  //50% {color:$lightblue; -webkit-transform:translateY(0%);}
-  //100%{color:$white; -webkit-transform:translateY(-100%);}
+@-webkit-keyframes share {
   0% {
-    -webkit-transform:translateY(-100%);
-    opacity: 0;
+    color:$darkblue; -webkit-transform:rotate(360deg) scale(1.4,1.4);
   }
-  5% {
-    -webkit-transform:translateY(-100%);
-    opacity: 0;
+
+  80%{
+    color:$lightblue; -webkit-transform:rotate(0deg) scale(1.3,1.3);
   }
-  15% {
-    -webkit-transform:translateY(0);
-    padding-bottom: 5px;
-  }
-  30% {
-    -webkit-transform:translateY(-50%);
-  }
-  40% {
-    -webkit-transform:translateY(0%);
-    padding-bottom: 6px;
-  }
-  50% {
-    -webkit-transform:translateY(-30%);
-  }
-  70% {
-    -webkit-transform:translateY(0%);
-    padding-bottom: 7px;
-  }
-  80% {
-    -webkit-transform:translateY(-15%);
-  }
-  90% {
-    -webkit-transform:translateY(0%);
-    padding-bottom: 8px;
-  }
-  95% {
-    -webkit-transform:translateY(-10%);
-  }
-  97% {
-    -webkit-transform:translateY(0%);
-    padding-bottom: 9px;
-  }
-  99% {
-    -webkit-transform:translateY(-5%);
-  }
-  100% {
-    -webkit-transform:translateY(0);
-    padding-bottom: 9px;
-    opacity: 1;
+  100%{
+    color:$lightblue; -webkit-transform:rotate(0deg) scale(1,1);
   }
 }
 
-@keyframes plus{
+@-webkit-keyframes share {
   0% {
-    transform:translateY(-100%);
-    opacity: 0;
-  }
-  5% {
-    transform:translateY(-100%);
-    opacity: 0;
-  }
-  15% {
-    transform:translateY(0);
-    padding-bottom: 5px;
-  }
-  30% {
-    transform:translateY(-50%);
-  }
-  40% {
-    transform:translateY(0%);
-    padding-bottom: 6px;
-  }
-  50% {
-    transform:translateY(-30%);
-  }
-  70% {
-    transform:translateY(0%);
-    padding-bottom: 7px;
-  }
-  80% {
-    transform:translateY(-15%);
-  }
-  90% {
-    transform:translateY(0%);
-    padding-bottom: 8px;
-  }
-  95% {
-    transform:translateY(-7%);
-  }
-  97% {
-    transform:translateY(0%);
-    padding-bottom: 9px;
-  }
-  99% {
-    transform:translateY(-3%);
-  }
-  100% {
-    transform:translateY(0);
-    padding-bottom: 9px;
-    opacity: 1;
+    color:$darkblue; transform:rotate(360deg) scale(1.4,1.4);
   }
 
+  80%{
+    color:$lightblue; -webkit-transform:rotate(0deg) scale(1.3,1.3);
+  }
+  100%{
+    color:$lightblue; transform:rotate(0deg) scale(1,1);
+  }
 }
+
+  @-webkit-keyframes social{
+    0% {-webkit-transform:translateX(-50%) translateY(-100%);}
+    //50%{-webkit-transform:translateY(-50%);}
+    100%{-webkit-transform:translateX(-50%) translateY(-50%);}
+  }
+
+  @keyframes social{
+    0% {transform:translateX(-50%) translateY(-100%);}
+    //50%{transform:translateY(-50%);}
+    100%{transform:translateX(-50%) translateY(-50%);}
+  }
+
+  @-webkit-keyframes plus {
+    0% {
+      color:$darkblue; -webkit-transform:translateY(0%);
+    }
+    50% {
+      color:$lightblue; -webkit-transform:translateY(-10%);
+    }
+    100%{
+      color:$white; -webkit-transform:translateY(0%);
+    }
+  }
+
+  @keyframes plus {
+
+    0% {
+      color: $darkblue;
+      transform: translateY(0%);
+    }
+    50% {
+      color: $lightblue;
+      transform: translateY(-10%);
+    }
+    100% {
+      color: $white;
+      transform: translateY(0%);
+    }
+  }
+
