--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9720,7 +9720,8 @@ h1, h2, h3, h4, h5 {
 
 .barcode {
   height: 80px;
-  text-align: center; }
+  text-align: center;
+  margin-top: 40px; }
 
 .item {
   border: none !important; }
@@ -9820,7 +9821,8 @@ h5.product-price {
 
 h5.bar-number {
   text-align: center;
-  font-size: 1em; }
+  font-size: 1em;
+  margin-top: 80px; }
 
 h3 {
   color: #037A67; }
@@ -9828,8 +9830,9 @@ h3 {
     font-size: 1.1em;
     font-weight: 300; }
   h3.product-detail-name {
-    font-size: 1.3em;
-    font-weight: 600; }
+    font-size: 1.5em;
+    font-weight: 200;
+    text-align: center; }
   h3.category-name {
     font-size: 1.2em;
     text-align: left;
@@ -9923,8 +9926,8 @@ div .container > a, div > i, div > h1 {
   transform: translateX(100%); }
 
 .slide-in-right.ng-enter, .slide-in-right > .ng-enter {
-  -webkit-transition: all cubic-bezier(0.1, 0.7, 0.1, 1) 800ms;
-  transition: all cubic-bezier(0.1, 0.7, 0.1, 1) 800ms; }
+  -webkit-transition: all cubic-bezier(0.1, 0.7, 0.1, 1) 200ms;
+  transition: all cubic-bezier(0.1, 0.7, 0.1, 1) 200ms; }
 
 .slide-in-right.ng-enter-active, .slide-in-right > .ng-enter-active {
   -webkit-transform: translateX(0);
@@ -9955,101 +9958,89 @@ img {
   color: #037A67;
   position: relative;
   font-size: 2.3em;
+  background-color: transparent;
   padding: 10px;
-  -webkit-animation: plus 2s infinite ease-out;
-  animation: plus 2s infinite ease-out; }
+  -webkit-animation: plus 1s infinite ease-out;
+  animation: plus 1s infinite ease-out; }
 
-.ion-social-twitter, .ion-social-facebook {
-  -webkit-animation: social 2s forwards;
-  animation: social 2s forwards;
-  font-size: 1.5em; }
+.ion-ios-plus-outline.activated {
+  background-color: transparent;
+  -webkit-animation: plus_active 1s infinite ease-in;
+  animation: plus_active 1s infinite ease-in; }
+
+button.ion-android-share-alt.activated {
+  background-color: transparent; }
+
+.ion-android-share-alt {
+  background-color: transparent;
+  color: #037A67;
+  font-size: 1.5em;
+  -webkit-animation: share 1400ms infinite;
+  animation: share 1400ms infinite; }
+
+button.ion-social-twitter, button.ion-social-facebook {
+  -webkit-animation: social 400ms forwards;
+  animation: social 400ms forwards;
+  font-size: 1.3em;
+  height: 42px;
+  width: 42px;
+  padding: 0;
+  border-radius: 25px;
+  min-height: 0 !important;
+  min-width: 0 !important; }
+
+@-webkit-keyframes share {
+  0% {
+    color: #1D647A;
+    -webkit-transform: rotate(360deg) scale(1.4, 1.4); }
+  80% {
+    color: #2E9FC2;
+    -webkit-transform: rotate(0deg) scale(1.3, 1.3); }
+  100% {
+    color: #2E9FC2;
+    -webkit-transform: rotate(0deg) scale(1, 1); } }
+
+@-webkit-keyframes share {
+  0% {
+    color: #1D647A;
+    transform: rotate(360deg) scale(1.4, 1.4); }
+  80% {
+    color: #2E9FC2;
+    -webkit-transform: rotate(0deg) scale(1.3, 1.3); }
+  100% {
+    color: #2E9FC2;
+    transform: rotate(0deg) scale(1, 1); } }
 
 @-webkit-keyframes social {
   0% {
-    -webkit-transform: translateY(-100%);
-    margin: 0px; }
+    -webkit-transform: translateX(-50%) translateY(-100%); }
   100% {
-    -webkit-transform: translateY(0%);
-    margin: 10px; } }
+    -webkit-transform: translateX(-50%) translateY(-50%); } }
 
 @keyframes social {
   0% {
-    transform: translateY(-100%);
-    margin: 0px; }
+    transform: translateX(-50%) translateY(-100%); }
   100% {
-    transform: translateY(0%);
-    margin: 10px; } }
+    transform: translateX(-50%) translateY(-50%); } }
 
 @-webkit-keyframes plus {
   0% {
-    -webkit-transform: translateY(-100%);
-    opacity: 0; }
-  5% {
-    -webkit-transform: translateY(-100%);
-    opacity: 0; }
-  15% {
-    -webkit-transform: translateY(0);
-    padding-bottom: 5px; }
-  30% {
-    -webkit-transform: translateY(-50%); }
-  40% {
-    -webkit-transform: translateY(0%);
-    padding-bottom: 6px; }
+    color: #1D647A;
+    -webkit-transform: translateY(0%); }
   50% {
-    -webkit-transform: translateY(-30%); }
-  70% {
-    -webkit-transform: translateY(0%);
-    padding-bottom: 7px; }
-  80% {
-    -webkit-transform: translateY(-15%); }
-  90% {
-    -webkit-transform: translateY(0%);
-    padding-bottom: 8px; }
-  95% {
+    color: #2E9FC2;
     -webkit-transform: translateY(-10%); }
-  97% {
-    -webkit-transform: translateY(0%);
-    padding-bottom: 9px; }
-  99% {
-    -webkit-transform: translateY(-5%); }
   100% {
-    -webkit-transform: translateY(0);
-    padding-bottom: 9px;
-    opacity: 1; } }
+    color: white;
+    -webkit-transform: translateY(0%); } }
 
 @keyframes plus {
   0% {
-    transform: translateY(-100%);
-    opacity: 0; }
-  5% {
-    transform: translateY(-100%);
-    opacity: 0; }
-  15% {
-    transform: translateY(0);
-    padding-bottom: 5px; }
-  30% {
-    transform: translateY(-50%); }
-  40% {
-    transform: translateY(0%);
-    padding-bottom: 6px; }
+    color: #1D647A;
+    transform: translateY(0%); }
   50% {
-    transform: translateY(-30%); }
-  70% {
-    transform: translateY(0%);
-    padding-bottom: 7px; }
-  80% {
-    transform: translateY(-15%); }
-  90% {
-    transform: translateY(0%);
-    padding-bottom: 8px; }
-  95% {
-    transform: translateY(-7%); }
-  97% {
-    transform: translateY(0%);
-    padding-bottom: 9px; }
-  99% {
-    transform: translateY(-3%); }
+    color: #2E9FC2;
+    transform: translateY(-10%); }
   100% {
-    transform: translateY(0);
-    padding-bottom: 9px;
-    opacity: 1; } }
+    color: white;
+    transform: translateY(0%); } }
