--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9721,7 +9721,7 @@ h1, h2, h3, h4, h5 {
 .barcode {
   height: 80px;
   text-align: center;
-  margin-top: 40px; }
+  margin-top: 30px; }
 
 .item {
   border: none !important; }
@@ -9979,8 +9979,8 @@ button.ion-android-share-alt.activated {
   animation: share 1400ms infinite; }
 
 button.ion-social-twitter, button.ion-social-facebook {
-  -webkit-animation: social 400ms forwards;
-  animation: social 400ms forwards;
+  -webkit-animation: social 800ms forwards;
+  animation: social 800ms forwards;
   font-size: 1.3em;
   height: 42px;
   width: 42px;
@@ -10013,15 +10013,19 @@ button.ion-social-twitter, button.ion-social-facebook {
 
 @-webkit-keyframes social {
   0% {
-    -webkit-transform: translateX(-50%) translateY(-100%); }
+    -webkit-transform: translateX(-40%) translateY(-100%);
+    color: #1D647A; }
   100% {
-    -webkit-transform: translateX(-50%) translateY(-50%); } }
+    -webkit-transform: translateX(-40%) translateY(-50%);
+    color: white; } }
 
 @keyframes social {
   0% {
-    transform: translateX(-50%) translateY(-100%); }
+    transform: translateX(-40%) translateY(-100%);
+    color: #1D647A; }
   100% {
-    transform: translateX(-50%) translateY(-50%); } }
+    transform: translateX(-40%) translateY(-50%);
+    color: white; } }
 
 @-webkit-keyframes plus {
   0% {
