--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -1,6 +1,6 @@
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
-@import "www/lib/ionic/scss/ionic";
+@import "ionic-custom.app.scss";
 $fira: "Fira Sans",sans-serif;
 $sourcepro: 'Source Sans Pro', Verdana, sans-serif;
 $right:'Righteous','Arial',sans-serif;
@@ -10,6 +10,7 @@ $green:#037A67;
 $red:#DD4137;
 $white:white;
 
+
 h1, h2, h3, h4, h5{
   font-family:$sourcepro;
 }
@@ -17,7 +18,6 @@ h1, h2, h3, h4, h5{
   height:80px;
   text-align: center;
   margin-top:30px;
-
 }
 .item{
   border:none !important;
@@ -39,56 +39,70 @@ h1.welcome-text{
 ion-content .product-detail-container{
   background-color:$white;
 }
-button.intro-prod,.intro-promo{
-  font-size:2em;
-  color:$lightblue;
-  font-weight:600;
-  background-color:$white;
-  border-radius:8px;
+.intro-prod{
+  padding:5px 20px;
+}
+.intro-promo{
   padding:5px 10px;
-  margin-top:10px;
-  border:none;
+
 }
-.ion-ios-cart-outline{
-  font-size:12em;
-  color:$white;
+.intro-prod,.intro-promo{
+    font-size:2em;
+    font-family: $fira;
+    margin-top:25px;
+    color:$lightblue;
+    font-weight:500;
+    background-color:$white;
+    border-radius:8px;
+    border:none;
+    -webkit-animation: button_intro 5s infinite linear;
+    animation:button_intro 5s infinite linear;
 }
 
-
-.logo-text{
-  font-family:$right;
-  font-size:5em;
-  font-weight: 500;
-  color: $darkblue;
+  .ion-ios-cart-outline{
+    font-size:12em;
+    color:$white;
+    margin-top:30px;
   }
 
-.product-promo-price{
-  color:black;
-}
-.product-promo{
-  color:$red;
-  font-weight: 600;
-  font-size:.8em;
-}
-.promo-date-text{
-  color:$darkblue;
-  background-color:$white;
-  font-size:.8em;
-  font-weight:300;
-}
-.product-poupa, br.product-poupa-price {
-  text-align: center;
-  background-color:#B08300;
-  color:$white;
-  margin-left:20%;
-  font-size: 0.8em;
-  font-weight:300;
-  border-radius:100px;
-  padding:5px 0;
-  -webkit-box-shadow: 1px 1px 5px 2px rgba(176,131,0,0.4);
-  -moz-box-shadow: 1px 1px 5px 2px rgba(176,131,0,0.4);
-  box-shadow: 1px 1px 5px 2px rgba(176,131,0,0.4);
-}
+
+  h1.logo-text{
+    font-family:$right;
+    font-size:5em;
+    font-weight: 500;
+    color: $darkblue;
+    -webkit-animation: logo 2s infinite;
+    animation: logo 2s infinite;
+
+  }
+
+  .product-promo-price{
+    color:black;
+  }
+  .product-promo{
+    color:$red;
+    font-weight: 600;
+    font-size:.8em;
+  }
+  .promo-date-text{
+    color:$darkblue;
+    background-color:$white;
+    font-size:.8em;
+    font-weight:300;
+  }
+  .product-poupa, br.product-poupa-price {
+    text-align: center;
+    background-color:#B08300;
+    color:$white;
+    margin-left:20%;
+    font-size: 0.8em;
+    font-weight:300;
+    border-radius:100px;
+    padding:5px 0;
+    -webkit-box-shadow: 1px 1px 5px 2px rgba(176,131,0,0.4);
+    -moz-box-shadow: 1px 1px 5px 2px rgba(176,131,0,0.4);
+    box-shadow: 1px 1px 5px 2px rgba(176,131,0,0.4);
+  }
 
   .product-price-promo{
     text-align:center;
@@ -120,7 +134,7 @@ button.intro-prod,.intro-promo{
       background-color: $green;
     }
     &.product-price {
-      font-size: 1.2em;
+      font-size: 1.1em;
       color: $white;
       background-color: $green;
     }
@@ -176,54 +190,71 @@ button.intro-prod,.intro-promo{
       font-size: 1.1em;
     }
   }
-
-  i.ion-android-arrow-down::before{
-    width:50px;
+div {
+  .container > a, > i, > h1{
+    display: block;
+    text-align: center;
   }
-
+}
   i.ion-android-arrow-down{
-    font-size:4em;
+    font-size:3.5em;
     color:$white;
     position:relative;
     left:50%;
     width:50px;
+    height:50px;
     margin-left:-25px;
+    min-height:0 !important;
+    min-width:0 !important;
+    padding:0;
     background-color:$lightblue;
-    -webkit-animation: flash 2s ease-out;
-    -moz-animation: flash 2s ease-out;
-    animation: flash 2s ease-out;
-    -webkit-animation-iteration-count: infinite;
-    -moz-animation-iteration-count: infinite;
-    animation-iteration-count: infinite;
-    border-radius:24px;
+    border-radius:25px;
   }
+i.ion-android-arrow-down {
+  -webkit-animation: arrow-down 2s infinite ease-out;
+  animation: arrow-down 2s infinite ease-out;
+}
+
+.platform-android4_4 .ion-android-arrow-down{
+  -webkit-animation: arrow-down_4_4 2s infinite ease-out;
+  animation: arrow-down_4_4 2s infinite ease-out;
+}
   hr{
     visibility: hidden;
     margin:0;
   }
+//ANIMATIONS //////////////////////
 
-  @-moz-keyframes flash {
-    0% {-moz-transform: initial;opacity: 0.2;}
-    25% {-moz-transform: initial;opacity: 0.2;}
-    50% {-moz-transform: initial;opacity: 0.5;}
-    75% {-moz-transform: initial;opacity: 0.8;}
-    100% {-moz-transform: initial;opacity: 0.2;}
-  }
+@-webkit-keyframes arrow-down {
+  0% {-webkit-transform: scale(0); opacity:0.2;}
+  25% {-webkit-transform: scale(.8); opacity: 0.2;}
+  50% {-webkit-transform: scale(.5);opacity: 0.5;}
+  75% {-webkit-transform: scale(.8);opacity: 0.8;}
+  100% {-webkit-transform: scale(1);opacity: 0.2;}
+}
+@keyframes arrow-down {
+  0% {-webkit-transform: scale(0); opacity:0.2;}
+  25% {-webkit-transform: scale(.8); opacity: 0.2;}
+  50% {-webkit-transform: scale(.5); opacity: 0.5;}
+  75% {-webkit-transform: scale(.8);opacity: 0.8;}
+  100% {-webkit-transform: scale(1); opacity: 0.2;}
+}
 
-  @-webkit-keyframes flash {
-    0% {-webkit-transform: initial; opacity:0.2;}
-    25% {-webkit-transform: initial;opacity: 0.2;}
-    50% {-webkit-transform: initial;opacity: 0.5;}
-    75% {-webkit-transform: initial;opacity: 0.8;}
-    100% {-webkit-transform: initial;opacity: 0.2;}
-  }
+@-webkit-keyframes arrow-down_4_4 {
+  0% {opacity:0.2;}
+  25% {opacity: 0.2;}
+  50% {opacity: 0.5;}
+  75% {opacity: 0.8;}
+  100% {opacity: 0.2;}
+}
+@keyframes arrow-down_4_4{
+  0% {opacity:0.2;}
+  25% {opacity: 0.2;}
+  50% {opacity: 0.5;}
+  75% {opacity: 0.8;}
+  100% {opacity: 0.2;}
+}
 
-  div {
-    .container > a, > i, > h1{
-      display: block;
-      text-align: center;
-    }
-  }
 
   .slide-in-right {
     -webkit-transform: translateX(100%);
@@ -255,9 +286,8 @@ button.intro-prod,.intro-promo{
     &.product-image-detail-modal {
       max-width: 300px;
       margin-top: 100px;
-      -webkit-animation: modal_anim 3s forwards;
-      -moz-animation: modal_anim 3s forwards;
-      animation: modal_anim 3s forwards;
+      -webkit-animation: modal_anim 2s;
+      animation: modal_anim 2s;
     }
     &.product-image-promo {
       max-width: 100px;
@@ -273,22 +303,22 @@ button.intro-prod,.intro-promo{
     -webkit-animation: plus 1s infinite ease-out;
     animation: plus 1s infinite ease-out;
   }
-.ion-ios-plus-outline.activated{
+  .ion-ios-plus-outline.activated{
     background-color: transparent;
     -webkit-animation: plus_active 1s infinite ease-in;
     animation: plus_active 1s infinite ease-in;
-}
-button.ion-android-share-alt.activated{
+  }
+  button.ion-android-share-alt.activated{
     background-color: transparent;
-}
+  }
 
-.ion-android-share-alt{
-  background-color:transparent;
-  color:$green;
-  font-size:1.5em;
-  -webkit-animation:share 1400ms infinite;
-  animation:share 1400ms infinite;
-}
+  .ion-android-share-alt{
+    background-color:transparent;
+    color:$green;
+    font-size:1.5em;
+    -webkit-animation:share 1400ms infinite;
+    animation:share 1400ms infinite;
+  }
 
   button.ion-social-twitter, button.ion-social-facebook{
     -webkit-animation: social 800ms forwards;
@@ -300,34 +330,33 @@ button.ion-android-share-alt.activated{
     border-radius:25px;
     min-height:0 !important;
     min-width:0 !important;
-
   }
 
-@-webkit-keyframes share {
-  0% {
-    color:$darkblue; -webkit-transform:rotate(360deg) scale(1.4,1.4);
+  @-webkit-keyframes share {
+    0% {
+      color:$darkblue; -webkit-transform:rotate(360deg) scale(1.4,1.4);
+    }
+
+    80%{
+      color:$lightblue; -webkit-transform:rotate(0deg) scale(1.3,1.3);
+    }
+    100%{
+      color:$lightblue; -webkit-transform:rotate(0deg) scale(1,1);
+    }
   }
 
-  80%{
-    color:$lightblue; -webkit-transform:rotate(0deg) scale(1.3,1.3);
-  }
-  100%{
-    color:$lightblue; -webkit-transform:rotate(0deg) scale(1,1);
-  }
-}
+  @-webkit-keyframes share {
+    0% {
+      color:$darkblue; transform:rotate(360deg) scale(1.4,1.4);
+    }
 
-@-webkit-keyframes share {
-  0% {
-    color:$darkblue; transform:rotate(360deg) scale(1.4,1.4);
+    80%{
+      color:$lightblue; -webkit-transform:rotate(0deg) scale(1.3,1.3);
+    }
+    100%{
+      color:$lightblue; transform:rotate(0deg) scale(1,1);
+    }
   }
-
-  80%{
-    color:$lightblue; -webkit-transform:rotate(0deg) scale(1.3,1.3);
-  }
-  100%{
-    color:$lightblue; transform:rotate(0deg) scale(1,1);
-  }
-}
 
   @-webkit-keyframes social{
     0% {-webkit-transform:translateX(-40%) translateY(-100%); color:$darkblue;}
@@ -369,3 +398,33 @@ button.ion-android-share-alt.activated{
     }
   }
 
+@-webkit-keyframes logo {
+  0%{
+    -webkit-text-stroke:2px #59c2fe;
+  }
+  25%{
+    -webkit-text-stroke:2px #59c2fe;
+  }
+  50%{
+    -webkit-text-stroke:2px $white;
+  }
+  75%{
+    -webkit-text-stroke:2px #59c2fe;
+  }
+  100%{
+    -webkit-text-stroke:2px $white;
+  }
+}
+
+@-webkit-keyframes button_intro{
+  0%,35%{-webkit-transform:rotate(0deg);}
+  45%,46%{-webkit-transform:rotate(15deg);}
+  55%,56%{-webkit-transform:rotate(-15deg);}
+  75%,100%{-webkit-transform:rotate(0deg);}
+}
+
+@-webkit-keyframes modal_anim {
+  0%{-webkit-transform: scale(1);}
+  50%{-webkit-transform: scale(2);}
+  100%{-webkit-transform: scale(1);}
+}
