--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -47,169 +47,166 @@ ion-content .product-detail-container{
 
 }
 .intro-prod,.intro-promo{
-    font-size:2em;
-    font-family: $fira;
-    margin-top:25px;
-    color:$lightblue;
-    font-weight:500;
-    background-color:$white;
-    border-radius:8px;
-    border:none;
-    -webkit-animation: button_intro 5s infinite linear;
-    animation:button_intro 5s infinite linear;
+  font-size:2em;
+  font-family: $fira;
+  margin-top:25px;
+  color:$lightblue;
+  font-weight:500;
+  background-color:$white;
+  border-radius:8px;
+  border:none;
+  -webkit-animation: button_intro 5s infinite linear;
+  animation:button_intro 5s infinite linear;
 }
 
-  .ion-ios-cart-outline{
-    font-size:12em;
-    color:$white;
-    margin-top:30px;
-  }
+.ion-ios-cart-outline{
+  font-size:12em;
+  color:$white;
+  margin-top:30px;
+}
 
+h1.logo-text{
+  font-family:$right;
+  font-size:5em;
+  font-weight: 500;
+  color: $darkblue;
+  -webkit-animation: logo 2s infinite;
+  animation: logo 2s infinite;
 
-  h1.logo-text{
-    font-family:$right;
-    font-size:5em;
-    font-weight: 500;
-    color: $darkblue;
-    -webkit-animation: logo 2s infinite;
-    animation: logo 2s infinite;
+}
 
-  }
+.product-promo-price{
+  color:black;
+}
+.product-promo{
+  color:$red;
+  font-weight: 600;
+  font-size:.8em;
+}
+.promo-date-text{
+  color:$darkblue;
+  background-color:$white;
+  font-size:.8em;
+  font-weight:300;
+}
+.product-poupa, br.product-poupa-price {
+  text-align: center;
+  background-color:#B08300;
+  color:$white;
+  margin-left:20%;
+  font-size: 0.8em;
+  font-weight:300;
+  border-radius:100px;
+  padding:5px 0;
+  -webkit-box-shadow: 1px 1px 5px 2px rgba(176,131,0,0.4);
+  -moz-box-shadow: 1px 1px 5px 2px rgba(176,131,0,0.4);
+  box-shadow: 1px 1px 5px 2px rgba(176,131,0,0.4);
+}
 
-  .product-promo-price{
-    color:black;
+.product-price-promo{
+  text-align:center;
+  color:$darkblue;
+  margin-left:20%;
+  align-content: center;
+  font-size:0.9em;
+  background-color:$white;
+  border-radius:250px;
+  padding:5px 10px;
+  border:1px double $darkblue;
+}
+h4 {
+  font-weight: 600;
+  color: $green;
+  &.product-detail-brand {
+    font-size: 1em;
   }
-  .product-promo{
-    color:$red;
-    font-weight: 600;
-    font-size:.8em;
-  }
-  .promo-date-text{
-    color:$darkblue;
-    background-color:$white;
-    font-size:.8em;
-    font-weight:300;
-  }
-  .product-poupa, br.product-poupa-price {
-    text-align: center;
-    background-color:#B08300;
-    color:$white;
-    margin-left:20%;
+  &.product-brand {
     font-size: 0.8em;
-    font-weight:300;
-    border-radius:100px;
-    padding:5px 0;
-    -webkit-box-shadow: 1px 1px 5px 2px rgba(176,131,0,0.4);
-    -moz-box-shadow: 1px 1px 5px 2px rgba(176,131,0,0.4);
-    box-shadow: 1px 1px 5px 2px rgba(176,131,0,0.4);
   }
+}
 
-  .product-price-promo{
-    text-align:center;
-    color:$darkblue;
-    margin-left:20%;
-    align-content: center;
-    font-size:0.9em;
-    background-color:$white;
-    border-radius:250px;
-    padding:5px 10px;
-    border:1px double $darkblue;
-  }
-  h4 {
+h5 {
+  &.product-detail-price {
+    font-size: 1.2em;
     font-weight: 600;
-    color: $green;
-    &.product-detail-brand {
-      font-size: 1em;
-    }
-    &.product-brand {
-      font-size: 0.8em;
-    }
+    color: $white;
+    background-color: $green;
   }
-
-  h5 {
-    &.product-detail-price {
-      font-size: 1.2em;
-      font-weight: 600;
-      color: $white;
-      background-color: $green;
-    }
-    &.product-price {
-      font-size: 1.1em;
-      color: $white;
-      background-color: $green;
-    }
-    &.bar-number{
-      text-align:center;
-      font-size:1em;
-      margin-top:80px;
-    }
+  &.product-price {
+    font-size: 1.1em;
+    color: $white;
+    background-color: $green;
   }
-
-  h3 {
-    color: $green;
-    &.product-name {
-      font-size: 1.1em;
-      font-weight: 300;
-    }
-    &.product-detail-name {
-      font-size: 1.5em;
-      font-weight: 200;
-      text-align: center;
-    }
-    &.category-name {
-      font-size: 1.2em;
-      text-align: left;
-      font-weight: 300;
-    }
-  }
-  .product-name-promo{
-    font-size:.8em;
-    font-weight:300;
-    color:$green;
-  }
-
-
-  h2.partilha{
-    background-color:$green;
-    color:$white;
-    padding:5px 0;
-    font-weight:300;
+  &.bar-number{
     text-align:center;
+    font-size:1em;
+    margin-top:80px;
   }
+}
 
-
-  .row.social-icons{
-    margin-top:10px;
+h3 {
+  color: $green;
+  &.product-name {
+    font-size: 1.1em;
+    font-weight: 300;
   }
-
-  .bar.bar-positive{
-    border-bottom:3px solid $lightblue !important;
-    & .title {
-      font-family: $fira;
-      font-weight: 300;
-      font-size: 1.1em;
-    }
+  &.product-detail-name {
+    font-size: 1.5em;
+    font-weight: 200;
+    text-align: center;
   }
+  &.category-name {
+    font-size: 1.2em;
+    text-align: left;
+    font-weight: 300;
+  }
+}
+.product-name-promo{
+  font-size:.8em;
+  font-weight:300;
+  color:$green;
+}
+
+h2.partilha{
+  background-color:$green;
+  color:$white;
+  padding:5px 0;
+  font-weight:300;
+  text-align:center;
+}
+
+.row.social-icons{
+  margin-top:10px;
+}
+
+.bar.bar-positive{
+  border-bottom:3px solid $lightblue !important;
+  & .title {
+    font-family: $fira;
+    font-weight: 300;
+    font-size: 1.1em;
+  }
+}
 div {
   .container > a, > i, > h1{
     display: block;
     text-align: center;
   }
 }
-  i.ion-android-arrow-down{
-    font-size:3.5em;
-    color:$white;
-    position:relative;
-    left:50%;
-    width:50px;
-    height:50px;
-    margin-left:-25px;
-    min-height:0 !important;
-    min-width:0 !important;
-    padding:0;
-    background-color:$lightblue;
-    border-radius:25px;
-  }
+i.ion-android-arrow-down{
+  font-size:3.5em;
+  color:$white;
+  position:relative;
+  left:50%;
+  width:50px;
+  height:50px;
+  margin-left:-25px;
+  min-height:0 !important;
+  min-width:0 !important;
+  padding:0;
+  background-color:$lightblue;
+  border-radius:25px;
+}
 i.ion-android-arrow-down {
   -webkit-animation: arrow-down 2s infinite ease-out;
   animation: arrow-down 2s infinite ease-out;
@@ -223,7 +220,7 @@ i.ion-android-arrow-down {
     visibility: hidden;
     margin:0;
   }
-//ANIMATIONS //////////////////////
+/////                                                     ANIMAÇÕES                                             ///////
 
 @-webkit-keyframes arrow-down {
   0% {-webkit-transform: scale(0); opacity:0.2;}
@@ -241,190 +238,139 @@ i.ion-android-arrow-down {
 }
 
 @-webkit-keyframes arrow-down_4_4 {
-  0% {opacity:0.2;}
-  25% {opacity: 0.2;}
+  0%, 25%, 100% {opacity:0.2;}
   50% {opacity: 0.5;}
   75% {opacity: 0.8;}
-  100% {opacity: 0.2;}
 }
 @keyframes arrow-down_4_4{
-  0% {opacity:0.2;}
-  25% {opacity: 0.2;}
+  0%, 25%, 100% {opacity:0.2;}
   50% {opacity: 0.5;}
   75% {opacity: 0.8;}
-  100% {opacity: 0.2;}
 }
 
 
-  .slide-in-right {
-    -webkit-transform: translateX(100%);
-    transform: translateX(100%); }
+.slide-in-right {
+  -webkit-transform: translateX(100%);
+  transform: translateX(100%); }
 
-  .slide-in-right.ng-enter, .slide-in-right > .ng-enter {
-    -webkit-transition: all cubic-bezier(0.1, 0.7, 0.1, 1) 200ms;
-    transition: all cubic-bezier(0.1, 0.7, 0.1, 1) 200ms; }
+.slide-in-right.ng-enter, .slide-in-right > .ng-enter {
+  -webkit-transition: all cubic-bezier(0.1, 0.7, 0.1, 1) 200ms;
+  transition: all cubic-bezier(0.1, 0.7, 0.1, 1) 200ms; }
 
-  .slide-in-right.ng-enter-active, .slide-in-right > .ng-enter-active {
-    -webkit-transform: translateX(0);
-    transform: translateX(0); }
+.slide-in-right.ng-enter-active, .slide-in-right > .ng-enter-active {
+  -webkit-transform: translateX(0);
+  transform: translateX(0); }
 
-  .slide-in-right.ng-leave, .slide-in-right > .ng-leave {
-    -webkit-transition: all ease-in-out 250ms;
-    transition: all ease-in-out 250ms; }
+.slide-in-right.ng-leave, .slide-in-right > .ng-leave {
+  -webkit-transition: all ease-in-out 250ms;
+  transition: all ease-in-out 250ms; }
 
 
-  img {
-    align-content: center;
-    display: block;
-    margin: 0 auto;
-    &.product-image {
-      max-width: 60px;
-    }
-    &.product-image-detail {
-      max-width: 250px;
-    }
-    &.product-image-detail-modal {
-      max-width: 300px;
-      margin-top: 100px;
-      -webkit-animation: modal_anim 2s;
-      animation: modal_anim 2s;
-    }
-    &.product-image-promo {
-      max-width: 100px;
-    }
+img {
+  align-content: center;
+  display: block;
+  margin: 0 auto;
+  &.product-image {
+    max-width: 60px;
   }
-
-  .ion-ios-plus-outline{
-    color:$green;
-    position: relative;
-    font-size:2.3em;
-    background-color:transparent;
-    padding: 10px;
-    -webkit-animation: plus 1s infinite ease-out;
-    animation: plus 1s infinite ease-out;
+  &.product-image-detail {
+    max-width: 250px;
   }
-  .ion-ios-plus-outline.activated{
-    background-color: transparent;
-    -webkit-animation: plus_active 1s infinite ease-in;
-    animation: plus_active 1s infinite ease-in;
+  &.product-image-detail-modal {
+    max-width: 300px;
+    margin-top: 100px;
+    -webkit-animation: modal_anim 2s;
+    animation: modal_anim 2s;
   }
-  button.ion-android-share-alt.activated{
-    background-color: transparent;
+  &.product-image-promo {
+    max-width: 100px;
   }
+}
 
-  .ion-android-share-alt{
-    background-color:transparent;
-    color:$green;
-    font-size:1.5em;
-    -webkit-animation:share 1400ms infinite;
-    animation:share 1400ms infinite;
-  }
+.ion-ios-plus-outline{
+  color:$green;
+  position: relative;
+  font-size:2.3em;
+  background-color:transparent;
+  padding: 10px;
+  -webkit-animation: plus 1s infinite ease-out;
+  animation: plus 1s infinite ease-out;
+}
+.ion-ios-plus-outline.activated{
+  background-color: transparent;
+  -webkit-animation: plus_active 1s infinite ease-in;
+  animation: plus_active 1s infinite ease-in;
+}
+button.ion-android-share-alt.activated{
+  background-color: transparent;
+}
 
-  button.ion-social-twitter, button.ion-social-facebook{
-    -webkit-animation: social 800ms forwards;
-    animation: social 800ms forwards;
-    font-size:1.3em;
-    height:42px;;
-    width:42px;
-    padding:0;
-    border-radius:25px;
-    min-height:0 !important;
-    min-width:0 !important;
-  }
+.ion-android-share-alt{
+  background-color:transparent;
+  color:$green;
+  font-size:1.5em;
+  -webkit-animation:share 1400ms infinite;
+  animation:share 1400ms infinite;
+}
 
-  @-webkit-keyframes share {
-    0% {
-      color:$darkblue; -webkit-transform:rotate(360deg) scale(1.4,1.4);
-    }
+button.ion-social-twitter, button.ion-social-facebook{
+  -webkit-animation: social 800ms forwards;
+  animation: social 800ms forwards;
+  font-size:1.3em;
+  height:42px;;
+  width:42px;
+  padding:0;
+  border-radius:25px;
+  min-height:0 !important;
+  min-width:0 !important;
+}
 
-    80%{
-      color:$lightblue; -webkit-transform:rotate(0deg) scale(1.3,1.3);
-    }
-    100%{
-      color:$lightblue; -webkit-transform:rotate(0deg) scale(1,1);
-    }
-  }
+@-webkit-keyframes share {
+  0% {color:$darkblue; -webkit-transform:rotate(360deg) scale(1.4,1.4);}
+  80%{color:$lightblue; -webkit-transform:rotate(0deg) scale(1.3,1.3);}
+  100%{color:$lightblue; -webkit-transform:rotate(0deg) scale(1,1);}
+}
 
-  @-webkit-keyframes share {
-    0% {
-      color:$darkblue; transform:rotate(360deg) scale(1.4,1.4);
-    }
+@-webkit-keyframes share {
+  0% {color:$darkblue; transform:rotate(360deg) scale(1.4,1.4);}
+  80%{color:$lightblue; -webkit-transform:rotate(0deg) scale(1.3,1.3);}
+  100%{color:$lightblue; transform:rotate(0deg) scale(1,1);}
+}
 
-    80%{
-      color:$lightblue; -webkit-transform:rotate(0deg) scale(1.3,1.3);
-    }
-    100%{
-      color:$lightblue; transform:rotate(0deg) scale(1,1);
-    }
-  }
+@-webkit-keyframes social{
+  0% {-webkit-transform:translateX(-40%) translateY(-100%); color:$darkblue;}
+  100%{-webkit-transform:translateX(-40%) translateY(-50%);color:$white;}
+}
 
-  @-webkit-keyframes social{
-    0% {-webkit-transform:translateX(-40%) translateY(-100%); color:$darkblue;}
-    //50%{-webkit-transform:translateY(-50%);}
-    100%{-webkit-transform:translateX(-40%) translateY(-50%);color:$white;}
-  }
+@keyframes social{
+  0% {transform:translateX(-40%) translateY(-100%); color:$darkblue;}
+  100%{transform:translateX(-40%) translateY(-50%); color:$white;}
+}
 
-  @keyframes social{
-    0% {transform:translateX(-40%) translateY(-100%); color:$darkblue;}
-    //50%{transform:translateY(-50%);}
-    100%{transform:translateX(-40%) translateY(-50%); color:$white;}
-  }
+@-webkit-keyframes plus {
+  0% {color:$darkblue; -webkit-transform:translateY(0%);}
+  50% {color:$lightblue; -webkit-transform:translateY(-10%);}
+  100%{color:$white; -webkit-transform:translateY(0%);}
+}
 
-  @-webkit-keyframes plus {
-    0% {
-      color:$darkblue; -webkit-transform:translateY(0%);
-    }
-    50% {
-      color:$lightblue; -webkit-transform:translateY(-10%);
-    }
-    100%{
-      color:$white; -webkit-transform:translateY(0%);
-    }
-  }
-
-  @keyframes plus {
-
-    0% {
-      color: $darkblue;
-      transform: translateY(0%);
-    }
-    50% {
-      color: $lightblue;
-      transform: translateY(-10%);
-    }
-    100% {
-      color: $white;
-      transform: translateY(0%);
-    }
-  }
+@keyframes plus {
+  0% {color: $darkblue;transform: translateY(0%);}
+  50% {color: $lightblue;transform: translateY(-10%);}
+  100% {color: $white;transform: translateY(0%);}
+}
 
 @-webkit-keyframes logo {
-  0%{
-    -webkit-text-stroke:2px #59c2fe;
-  }
-  25%{
-    -webkit-text-stroke:2px #59c2fe;
-  }
-  50%{
-    -webkit-text-stroke:2px $white;
-  }
-  75%{
-    -webkit-text-stroke:2px #59c2fe;
-  }
-  100%{
-    -webkit-text-stroke:2px $white;
-  }
+  0%, 25%, 75%{-webkit-text-stroke:2px #59c2fe;}
+  50%, 100%{-webkit-text-stroke:2px $white;}
 }
 
 @-webkit-keyframes button_intro{
-  0%,35%{-webkit-transform:rotate(0deg);}
-  45%,46%{-webkit-transform:rotate(15deg);}
-  55%,56%{-webkit-transform:rotate(-15deg);}
-  75%,100%{-webkit-transform:rotate(0deg);}
+  0%,35%,75%,100%{-webkit-transform:rotate(0deg);}
+  45%,46%{-webkit-transform:rotate(5deg);}
+  55%,56%{-webkit-transform:rotate(-5deg);}
 }
 
 @-webkit-keyframes modal_anim {
-  0%{-webkit-transform: scale(1);}
+  0%, 100%{-webkit-transform: scale(1);}
   50%{-webkit-transform: scale(2);}
-  100%{-webkit-transform: scale(1);}
 }
